force-app/main/default/objects/SRQI_CEI__c/SRQI_CEI__c.object-meta.xml
<CustomObject>
    <description>A custom object to capture CEI data</description>
    <label>Consumer Experience Interview</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Experience Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>