force-app/main/default/objects/SRQI_CEI__c/fields/ACI__c.field-meta.xml
<CustomField>
    <fullName>ACI__c</fullName>
    <description>Flag for assessed cognitive impairment</description>
    <label>Assessed Cognitive Impairment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>