force-app/main/default/objects/SRQI_CEI__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <label>Activity Start Date</label>
    <type>DateTime</type>
</CustomField>