force-app/main/default/objects/SRQI_CEI__c/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <description>Flag for Assistance required for the interview</description>
    <label>Req. Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>