force-app/main/default/objects/SRQI_CEI__c/fields/Best_Thing_About_This_Service__c.field-meta.xml
<CustomField>
    <fullName>Best_Thing_About_This_Service__c</fullName>
    <label>Best Thing About This Service</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>