force-app/main/default/objects/SRQI_CEI__c/fields/CEI_Rating__c.field-meta.xml
<CustomField>
    <fullName>CEI_Rating__c</fullName>
    <label>CEI Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>