force-app/main/default/objects/SRQI_CEI__c/fields/CEI_Version_No__c.field-meta.xml
<CustomField>
    <fullName>CEI_Version_No__c</fullName>
    <label>CEI Version No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>