force-app/main/default/objects/SRQI_CEI__c/fields/CER_Id__c.field-meta.xml
<CustomField>
    <fullName>CER_Id__c</fullName>
    <label>CER Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>