force-app/main/default/objects/SRQI_CEI__c/fields/CERINTERVIEWID__c.field-meta.xml
<CustomField>
    <fullName>CERINTERVIEWID__c</fullName>
    <externalId>true</externalId>
    <label>External Identifier</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>