force-app/main/default/objects/SRQI_CEI__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <label>Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>