force-app/main/default/objects/SRQI_CEI__c/fields/Consumer_Experience_Report__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Experience_Report__c</fullName>
    <label>Consumer Experience Report</label>
    <referenceTo>SRQI_CER__c</referenceTo>
    <relationshipLabel>Consumer Experience Interviews</relationshipLabel>
    <relationshipName>Consumer_Experience_Interviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>