force-app/main/default/objects/SRQI_CEI__c/fields/File_Staging_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Staging_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Staging Id</label>
    <referenceTo>File_Staging__c</referenceTo>
    <relationshipLabel>Consumer Experience Interviews</relationshipLabel>
    <relationshipName>Consumer_Experience_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>