force-app/main/default/objects/SRQI_CEI__c/fields/Improvement_At_This_Service__c.field-meta.xml
<CustomField>
    <fullName>Improvement_At_This_Service__c</fullName>
    <label>Improvement At This Service</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>