force-app/main/default/objects/SRQI_CEI__c/fields/LOI__c.field-meta.xml
<CustomField>
    <fullName>LOI__c</fullName>
    <label>Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>