force-app/main/default/objects/SRQI_CEI__c/fields/Part_INT__c.field-meta.xml
<CustomField>
    <fullName>Part_INT__c</fullName>
    <description>Flag to indicate whether interview was started but not completed</description>
    <label>Partial Interview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>