force-app/main/default/objects/SRQI_CEI__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <label>SF Provider Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>