force-app/main/default/objects/SRQI_CEI__c/fields/Proxy__c.field-meta.xml
<CustomField>
    <fullName>Proxy__c</fullName>
    <description>Flag to record whether interview was conducted with a proxy</description>
    <label>Iv via proxy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>