force-app/main/default/objects/SRQI_CEI__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <formula>Consumer_Experience_Report__r.Reporting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period</label>
    <type>Text</type>
</CustomField>