force-app/main/default/objects/SRQI_CEI__c/fields/Service_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Id__c</fullName>
    <formula>Consumer_Experience_Report__r.Service_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Account Id</label>
    <type>Text</type>
</CustomField>