force-app/main/default/objects/SRQI_CEI__c/fields/Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Id__c</fullName>
    <label>SF Service Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>