force-app/main/default/objects/SRQI_CEI__c/fields/Service_Int_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Int_Id__c</fullName>
    <formula>Consumer_Experience_Report__r.Service_Account__r.Service_Name__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Integration ID</label>
    <type>Text</type>
</CustomField>