force-app/main/default/objects/SRQI_CEI__c/fields/SNG_ATSI__c.field-meta.xml
<CustomField>
    <fullName>SNG_ATSI__c</fullName>
    <description>Flag for people from Aboriginal and Torres Strait Islander communities</description>
    <label>Indigenous Australian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>