force-app/main/default/objects/SRQI_CEI__c/fields/SNG_CALD__c.field-meta.xml
<CustomField>
    <fullName>SNG_CALD__c</fullName>
    <description>Flag for people from culturally and linguistically diverse backgrounds</description>
    <label>Culturally Diverse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>