force-app/main/default/objects/SRQI_CEI__c/fields/SNG_CL__c.field-meta.xml
<CustomField>
    <fullName>SNG_CL__c</fullName>
    <description>Flag for care-leavers</description>
    <label>Care-Leaver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>