force-app/main/default/objects/SRQI_CEI__c/fields/SNG_FA__c.field-meta.xml
<CustomField>
    <fullName>SNG_FA__c</fullName>
    <description>Flag for parents separated from their children by forced adoption or removal</description>
    <label>Forced Adopt. or Removal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>