force-app/main/default/objects/SRQI_CEI__c/fields/SNG_FSD__c.field-meta.xml
<CustomField>
    <fullName>SNG_FSD__c</fullName>
    <description>Flag for people who are financially or socially disadvantaged</description>
    <label>Social or Financial Disadv</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>