force-app/main/default/objects/SRQI_CEI__c/fields/SNG_Hom__c.field-meta.xml
<CustomField>
    <fullName>SNG_Hom__c</fullName>
    <description>Flag for people who are homeless or at risk of becoming homeless</description>
    <label>Homeless</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>