force-app/main/default/objects/SRQI_CEI__c/fields/SNG_LGBTI__c.field-meta.xml
<CustomField>
    <fullName>SNG_LGBTI__c</fullName>
    <description>Flag for lesbian, gay, bisexual, transgender and intersex people</description>
    <label>LGBTIQ+</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>