force-app/main/default/objects/SRQI_CEI__c/fields/Trans__c.field-meta.xml
<CustomField>
    <fullName>Trans__c</fullName>
    <description>Flag to record whether translator was used in interview</description>
    <label>Translator Req.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>