force-app/main/default/objects/SRQI_CEI__c/fields/Voice__c.field-meta.xml
<CustomField>
    <fullName>Voice__c</fullName>
    <label>Do You Hve Dly Actv</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consent_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Some of the time</fullName>
            </value>
            <value>
                <fullName>Most of the time</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>