force-app/main/default/objects/SRQI_CEI__c/validationRules/Best_Thing_About_This_Service_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Best_Thing_About_This_Service_Validation</fullName>
    <active>true</active>
    <description>Confirm Field is not null</description>
    <errorConditionFormula>OR(ISNULL(Best_Thing_About_This_Service__c), ISBLANK(Best_Thing_About_This_Service__c)  )</errorConditionFormula>
    <errorDisplayField>Best_Thing_About_This_Service__c</errorDisplayField>
    <errorMessage>Best Thing About This Service should not be empty</errorMessage>
</ValidationRule>