force-app/main/default/objects/SRQI_CEI__c/validationRules/Care_Need_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_Need_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Care_Need__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Care_Need__c</errorDisplayField>
    <errorMessage>Care Need should be set to valid value other than None</errorMessage>
</ValidationRule>