force-app/main/default/objects/SRQI_CEI__c/validationRules/Caring_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Caring_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Caring__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Caring__c</errorDisplayField>
    <errorMessage>Caring should be set to valid value other than None</errorMessage>
</ValidationRule>