force-app/main/default/objects/SRQI_CEI__c/validationRules/Competent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Competent_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Competent__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Competent__c</errorDisplayField>
    <errorMessage>Competent should be set to valid value other than None</errorMessage>
</ValidationRule>