force-app/main/default/objects/SRQI_CEI__c/validationRules/Consent_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Consent_Status</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Consent_Status__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Consent_Status__c</errorDisplayField>
    <errorMessage>Consent Status should be set to valid value other than None</errorMessage>
</ValidationRule>