force-app/main/default/objects/SRQI_CEI__c/validationRules/Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Validation</fullName>
    <active>true</active>
    <description>Confirm Duration is not null</description>
    <errorConditionFormula>ISNULL(LOI__c)</errorConditionFormula>
    <errorDisplayField>LOI__c</errorDisplayField>
    <errorMessage>Duration should not be null</errorMessage>
</ValidationRule>