force-app/main/default/objects/SRQI_CEI__c/validationRules/Explain_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Explain_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Explain__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Explain__c</errorDisplayField>
    <errorMessage>Explain should be set to valid value other than None</errorMessage>
</ValidationRule>