force-app/main/default/objects/SRQI_CEI__c/validationRules/Follow_Up_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Follow_Up__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Follow_Up__c</errorDisplayField>
    <errorMessage>Follow Up should be set to valid value other than None</errorMessage>
</ValidationRule>