force-app/main/default/objects/SRQI_CEI__c/validationRules/Food_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Food_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Food__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Food__c</errorDisplayField>
    <errorMessage>Food should be set to valid value other than None</errorMessage>
</ValidationRule>