force-app/main/default/objects/SRQI_CEI__c/validationRules/Home_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Home__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Home__c</errorDisplayField>
    <errorMessage>Home should be set to valid value other than None</errorMessage>
</ValidationRule>