force-app/main/default/objects/SRQI_CEI__c/validationRules/Improvement_At_This_Service_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Improvement_At_This_Service_Validation</fullName>
    <active>true</active>
    <description>Confirm Field is not null</description>
    <errorConditionFormula>OR(ISNULL(Improvement_At_This_Service__c), ISBLANK(Improvement_At_This_Service__c) )</errorConditionFormula>
    <errorDisplayField>Improvement_At_This_Service__c</errorDisplayField>
    <errorMessage>Improvement At This Service should not be empty</errorMessage>
</ValidationRule>