force-app/main/default/objects/SRQI_CEI__c/validationRules/Independent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Independent_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Independent__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Independent__c</errorDisplayField>
    <errorMessage>Independent should be set to valid value other than None</errorMessage>
</ValidationRule>