force-app/main/default/objects/SRQI_CEI__c/validationRules/Operation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Operation_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Operation__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Operation__c</errorDisplayField>
    <errorMessage>Operation should be set to valid value other than None</errorMessage>
</ValidationRule>