force-app/main/default/objects/SRQI_CEI__c/validationRules/Respect_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Respect_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Respect__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Respect__c</errorDisplayField>
    <errorMessage>Respect should be set to valid value other than None</errorMessage>
</ValidationRule>