force-app/main/default/objects/SRQI_CEI__c/validationRules/Safety_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Safety_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Safety__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Safety__c</errorDisplayField>
    <errorMessage>Safety should be set to valid value other than None</errorMessage>
</ValidationRule>