force-app/main/default/objects/SRQI_CEI__c/validationRules/Voice_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Voice_Validation</fullName>
    <active>true</active>
    <description>Confirm picklist not set to None</description>
    <errorConditionFormula>ISPICKVAL(Voice__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Voice__c</errorDisplayField>
    <errorMessage>Voice should be set to valid value other than None</errorMessage>
</ValidationRule>